--- a/index.html
+++ b/index.html
@@ -5,9 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mahbub Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+  <section class="top">
+    <div class="half-width">
+        <h1>Wlcome To</h1>
+        <h1> <span class="orenge-color">Peter Parker</span> World</h1>
+        <h2> Building Climber And Train Stoper</h2>
+        <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work.
+            That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.
+        </p>
+        <a class="Link-Button" target="_blank" href="http://www.google.com"> HIRE ME</a>
+    </div>
+    <div class="half-width"><img src="image/Mahbub.jpg" alt=""></div>
+  </section>
 </body>
 </html>
